--- a/client-app/src/app/home/home.component.css
+++ b/client-app/src/app/home/home.component.css
@@ -3,3 +3,9 @@
   margin-top: 14px !important;
   margin-left: 2% !important;
 }
+
+@media print {
+  .content-no-print {
+    display: none;
+  }
+}
