--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -8,7 +8,7 @@
         <router-outlet></router-outlet>
       </div>
     </div>
-    <nav class="sidenav">
+    <nav class="sidenav content-no-print">
       <section class="sidenav-content">
         <a (click)="irPaginaEquipo()" class="nav-link" routerLinkActive="active">
           Equipos
