mejoras en las pantallas de informes de contrato y equipo

--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <header class="header header-4">
+  <header class="header header-4 content-no-print">
     <h2 class="header-title">Gestión de Mantenimiento Equipos Médicos</h2>
   </header>
   <div class="content-container">
