--- a/client-app/src/app/home/informes/informe-contratos/informe-contratos.component.html
+++ b/client-app/src/app/home/informes/informe-contratos/informe-contratos.component.html
@@ -47,6 +47,10 @@
         </div>
       </div>
     </div>
+    <a class="btn btn-outline content-no-print btn-print"
+       onclick="window.print()">
+      Imprimir
+    </a>
   </div>
 
   <div class="clr-row">
